# lottery-demo-dapp

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  package-lock.json  spec.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml
client/: .eslintrc.json  .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  config-overrides.js  docker-build.sh  docker-run.sh  package-lock.json  package.json  tsconfig.json
client/public/: config.js.local  config.js.template  index.html  manifest.json  prism.css  styles.css
client/public/fonts/jetbrains-mono/: jetbrains-mono.css
client/src/: App.tsx  casper-helper.ts  globals.d.ts  index.css  index.tsx  play.interface.ts
client/src/app/components/: index.tsx
client/src/app/router/: index.tsx  paths.ts
client/src/app/services/: WebSocketProvider.tsx  use-fetch.ts  use-get-table-data.ts
client/src/app/theme/: index.tsx
client/src/app/types/: ActiveAccount.ts  Deploy.ts  Play.ts  Round.ts  Transaction.ts  UiBaseProps.ts  index.ts
client/src/app/utils/: casper-helper.ts  constants.ts  currency.ts  formatters.ts  helpers.ts  match-media.ts  match-size.ts
client/src/components/: WebSocketProvider.tsx  container.tsx
client/src/components/App/: index.tsx
client/src/components/ClickTopBar/: index.tsx
client/src/globalStyles/: index.tsx
client/src/theme/: index.tsx
client/types/: globals.d.ts  react-identicons.d.ts
docs/: specs.md
docs/tickets/: tickets-all.md
docs/tickets/client/: tickets-client.md
docs/tickets/repository/: tickets-repository.md
docs/tickets/server/: tickets-server.md
docs/tickets/smart-contract/: tickets-sc.md
facuet/: Cargo.toml
facuet/src/: faucet.rs  lib.rs
faucet/: Cargo.toml  Odra.toml
faucet/src/: faucet.rs
infra/docker/: api.dockerfile  client.dockerfile  event-handler.dockerfile
infra/docker/client-nginx/: 100-build-env-specific-assets.sh  nginx.conf
infra/local/: docker-compose.yaml
infra/local/provision/: 01-dev-database.sql
lottery/: Cargo.toml  README.md
lottery-contracts/: .gitignore  Cargo.toml  Odra.toml  README.md  justfile
lottery-contracts/lottery-cli/: Cargo.toml
lottery-contracts/lottery-contracts/: Cargo.toml
lottery-contracts/lottery-contracts/src/: lib.rs  lottery.rs
lottery/src/: lottery.rs
server/: .env.example  .eslintrc  Makefile  README.md  package-lock.json  package.json  tsconfig.json
server/lottery-api/: .env  Dockerfile  docker-build.sh  docker-compose.yml  docker-run.sh  package-lock.json  package.json  tsconfig.json
server/lottery-api/src/: app.ts  index.ts
server/lottery-api/src/config/: config-dev.ts
server/lottery-api/src/models/: account.ts
server/src/: api.ts  config.ts  data-source.ts  event-handler.ts  events.ts
server/src/cspr-cloud/: account.ts  api-client.ts
server/src/entity/: play.entity.ts  round.entity.ts
server/src/middleware/: pagination.ts
server/src/middlewares/: pagination.ts
server/src/migration/: 1711623923370-Init.ts  1713372155154-CreateRoundsView.ts
server/src/repository/: play.ts  round.ts
server/src/seeds/: plays.json  seed.ts
smart-contract/: .env.sample  CHANGELOG.md  Cargo.toml  Makefile  Odra.toml  README.md
smart-contract/faucet/: CHANGELOG.md  README.md
smart-contract/lottery/: Cargo.toml  Makefile  README.md
smart-contract/lottery-contracts/: Cargo.toml
smart-contract/lottery-contracts/src/: lottery.rs
smart-contract/lottery/src/: lottery.rs
smart-contract/src/: lottery.rs
(+94 files in other folders)
